@@ -33,7 +33,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3cdecl\fP 1 "February 24, 2021" "PJL TOOLS"
+.TH \f3cdecl\fP 1 "March 4, 2021" "PJL TOOLS"
 .SH NAME
 cdecl, c++decl \- compose and decipher C & C++ declarations and casts
 .SH SYNOPSIS
@@ -482,7 +482,7 @@ or
 Suppresses printing of the prompt in interactive mode.
 .TP
 .BR \-\-no-semicolon " | " \-s
-Suppresses printing of a trailing semicolon for C (and C++) declarations.
+Suppresses printing of a final semicolon for C (and C++) declarations.
 .TP
 .BR \-\-no-typedefs " | " \-t
 Suppresses predefining standard types,
