@@ -444,32 +444,33 @@ static void usage( void ) {
 "usage: " PACKAGE " [options] [command...]\n"
 "       " PACKAGE " [options] files...\n"
 "options:\n"
-"  --alt-tokens    (-a)  Print alternative tokens.\n"
+"  --alt-tokens        (-a)  Print alternative tokens.\n"
 #ifdef YYDEBUG
-"  --bison-debug   (-B)  Enable Bison debug output.\n"
+"  --bison-debug       (-B)  Enable Bison debug output.\n"
 #endif /* YYDEBUG */
-"  --color=WHEN    (-k)  When to colorize output [default: not_file].\n"
-"  --config=FILE   (-c)  The configuration file [default: ~/" CONF_FILE_NAME_DEFAULT "].\n"
+"  --color=WHEN        (-k)  When to colorize output [default: not_file].\n"
+"  --config=FILE       (-c)  The configuration file [default: ~/" CONF_FILE_NAME_DEFAULT "].\n"
 #ifdef ENABLE_CDECL_DEBUG
-"  --debug         (-d)  Enable debug output.\n"
+"  --debug             (-d)  Enable debug output.\n"
 #endif /* ENABLE_CDECL_DEBUG */
-"  --digraphs      (-2)  Print digraphs.\n"
-"  --east-const    (-E)  Print in \"east const\" form.\n"
-"  --explain       (-e)  Assume \"explain\" when no other command is given.\n"
-"  --file=FILE     (-f)  Read from this file [default: stdin].\n"
+"  --digraphs          (-2)  Print digraphs.\n"
+"  --east-const        (-E)  Print in \"east const\" form.\n"
+"  --explain           (-e)  Assume \"explain\" when no other command is given.\n"
+"  --explicit-int=WHEN (-I)  When to print \"int\" explicitly.\n"
+"  --file=FILE         (-f)  Read from this file [default: stdin].\n"
 #ifdef ENABLE_FLEX_DEBUG
-"  --flex-debug    (-F)  Enable Flex debug output.\n"
+"  --flex-debug        (-F)  Enable Flex debug output.\n"
 #endif /* ENABLE_FLEX_DEBUG */
-"  --help          (-h)  Print this help and exit.\n"
-"  --interactive   (-i)  Force interactive mode.\n"
-"  --language=LANG (-x)  Use LANG.\n"
-"  --no-config     (-C)  Suppress reading configuration file.\n"
-"  --no-prompt     (-p)  Suppress prompt.\n"
-"  --no-semicolon  (-s)  Suppress printing trailing semicolon in declarations.\n"
-"  --no-typedefs   (-t)  Suppress predefining standard types.\n"
-"  --output=FILE   (-o)  Write to this file [default: stdout].\n"
-"  --trigraphs     (-3)  Print trigraphs.\n"
-"  --version       (-v)  Print version and exit.\n"
+"  --help              (-h)  Print this help and exit.\n"
+"  --interactive       (-i)  Force interactive mode.\n"
+"  --language=LANG     (-x)  Use LANG.\n"
+"  --no-config         (-C)  Suppress reading configuration file.\n"
+"  --no-prompt         (-p)  Suppress prompt.\n"
+"  --no-semicolon      (-s)  Suppress printing final semicolon for declarations.\n"
+"  --no-typedefs       (-t)  Suppress predefining standard types.\n"
+"  --output=FILE       (-o)  Write to this file [default: stdout].\n"
+"  --trigraphs         (-3)  Print trigraphs.\n"
+"  --version           (-v)  Print version and exit.\n"
 "\n"
 "Report bugs to: " PACKAGE_BUGREPORT "\n"
 PACKAGE_NAME " home page: " PACKAGE_URL "\n"
